[metadata]
name = TEMPLATE
version = 0.0.1
url = GIT_PATH
license = MIT License
author = Andrew Abramenko
author_email = a.i.abramenko@yandex.ru
description = Application for storing drums practicing log
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",

[options]
include_package_data = true
python_requires = >= 3.9